# nm-openconnect-pulse-sso

./: .gitignore  README.md  default-selenium.nix  default.nix  flake.nix  module.nix  plasma-nm-overlay.nix
.agents/skills/vpn-debug/: SKILL.md
auth/: pulse_sso_auth.py
auth-dialog/: pulse-sso-auth-dialog  pulse-sso-auth-dialog-selenium
auth-selenium/: __init__.py  pulse_sso_auth.py
browser-auth/: auth-dialog  default.nix  diagnose.sh  faultinject.sh  proxy.py  reset.sh  trust-install.sh
cef-auth/: CMakeLists.txt  default.nix  main.cc
dbus/: nm-pulse-sso-service.conf  nm-pulse-sso-service.name.in
extensions/: bitwarden.nix
patches/: openconnect-tcp-keepalive.patch
plasma-plugin/: CMakeLists.txt  pulsessoui.cpp  pulsessoui.h  pulsessoui.json  pulsessowidget.cpp  pulsessowidget.h  pulsessowidget.ui
scripts/: diagnose.sh  nm-dispatcher.sh  service-restart.sh  vpn-auto-reconnect.sh  vpn-reconnect.sh
scripts/vpnc/: post-connect-auto-reconnect-flag.sh  post-connect-default-route.sh  post-connect-flush-dns.sh  post-connect-narrow-docker.sh  reconnect-default-route.sh  reconnect-flush-dns.sh  reconnect-narrow-docker.sh
vpn-service/: nm-pulse-sso-helper  nm-pulse-sso-service.py
